OC   OpenCart            3.0.3.7             >= 3.0
PS   PrestaShop          1.7.8.5             >= 1.7.6
VM   VirtueMart (Joomla) 3.8.8               >= 3.0
                         4.0.2               Does not work with Joomla 4.1.4,
                                             not tested with Joomla 3.10
WC   WooCommerce         6.5.1               >= 5.0 (3 and 4 will probably work)
     WordPress           6.0                 >= 5.0 (WP 4 will probably work)
--------------------------------------------------------------------------------

7.2.3 (2022-06-01) (HS, WM only)
--------------------------------
Bugs:
- ALL: PHP Warning:  Undefined array key "vattypeid" in Invoice/Completor.php on
 line 1214.
- WC: Argument 1 passed to Siel\Acumulus\Helpers\Number::floatsAreEqual() must
  be of the type float, string given, called in WooCommerce/Invoice/Creator.php
  on line 435.
- ALL: PHP Warning: count(): Parameter must be an array or an object that
  implements Countable in Shop/InvoiceStatusForm.php on line 670.
  You will notice this error when turning a concept into a definitive invoice
  and then visiting the order page. The Acumulus tab or box will show an error
  message instead of the details of the definitive invoice.

Features:
- JOO: Changed Joomla specific parts to run on Joomla 4. Note: VirtueMart will
  NOT run on Joomla 4, even not VM4! HikaShop: yet to be tested.
- ALL: Allow also warnings when checking requirements.

7.2.2 (2022-05-13) (OC, PS only)
--------------------------------
Bugs:
- PHP 7.4 syntax: ParseError: syntax error, unexpected '=' in
  ApiClient/Acumulus.php:858.
  To solve: upgrade to PHP 7.4 or change the given line to:
    $logLevel = $logLevel ?? Severity::Exception;

Features:
- PS, OC: Added crash reporting (explained in the notes for 7.1.0).


7.2.1 (2022-05-12) (MA, WC only)
--------------------------------
Bugs:
- MA: Magento coding standards: The use of function assert() is forbidden.